fix code for java version 20